<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="2dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/n_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/n_2"
            android:layout_above="@id/scientific"
            android:layout_marginBottom="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@id/n_2"
            android:background="@color/colorAccent"
            android:text="@string/num_0"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_above="@id/n_0"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorAccent"
            android:text="@string/num_1"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_above="@id/n_0"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_1"
            android:layout_toRightOf="@+id/n_1"
            android:background="@color/colorAccent"
            android:text="@string/num_2"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/punto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/scientific"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/n_2"
            android:layout_toRightOf="@+id/n_2"
            android:background="@color/colorAccent"
            android:text="@string/punto"
            android:textSize="30sp" />
        <Button
            android:id="@+id/igual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/scientific"
            android:layout_alignTop="@+id/n_1"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/punto"
            android:layout_toRightOf="@+id/punto"
            android:background="@android:color/black"
            android:text="@string/igl"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/punto"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_2"
            android:layout_toRightOf="@+id/n_2"
            android:background="@color/colorAccent"
            android:text="@string/num_3"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="2dp"
            android:background="@color/colorAccent"
            android:text="@string/num_4"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_2"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_4"
            android:layout_toRightOf="@+id/n_4"
            android:background="@color/colorAccent"
            android:text="@string/num_5"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_3"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_5"
            android:layout_toRightOf="@+id/n_5"
            android:background="@color/colorAccent"
            android:text="@string/num_6"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/igual"
            android:layout_alignTop="@+id/n_4"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_6"
            android:layout_toRightOf="@+id/n_6"
            android:background="@android:color/black"
            android:text="@string/c"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="2dp"
            android:background="@color/colorAccent"
            android:text="@string/num_7"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_5"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_7"
            android:layout_toRightOf="@+id/n_7"
            android:background="@color/colorAccent"
            android:text="@string/num_8"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/n_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_6"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_8"
            android:layout_toRightOf="@+id/n_8"
            android:background="@color/colorAccent"
            android:text="@string/num_9"
            android:textAlignment="center"
            android:textSize="30sp" />
        <Button
            android:id="@+id/ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/c"
            android:layout_alignTop="@+id/n_7"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/n_9"
            android:layout_toRightOf="@+id/n_9"
            android:background="@android:color/black"
            android:text="@string/ce"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="2dp"
            android:background="@android:color/black"
            android:text="@string/div"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp"
            android:visibility="visible" />
        <Button
            android:id="@+id/multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_8"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/division"
            android:layout_toRightOf="@+id/division"
            android:background="@android:color/black"
            android:text="@string/mult"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/suma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/n_9"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/multiplicacion"
            android:layout_toRightOf="@+id/multiplicacion"
            android:background="@android:color/black"
            android:text="@string/sum"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp" />

        <Button
            android:id="@+id/resta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/ce"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_toEndOf="@+id/suma"
            android:layout_toRightOf="@+id/suma"
            android:background="@android:color/black"
            android:text="@string/res"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/cuentas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/division"
            android:layout_alignEnd="@+id/igual"
            android:layout_alignRight="@+id/igual"
            android:layout_marginBottom="2dp"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/operacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cuentas"
            android:layout_alignEnd="@+id/igual"
            android:layout_alignRight="@+id/igual"
            android:layout_marginBottom="2dp"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="25sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/scientific"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/igual"
            android:background="@android:color/black"
            android:text="@string/scientific"
            android:textColor="@android:color/white"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/Acerca_De"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:textColor="@android:color/black"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/acerca_de" />

    </RelativeLayout>

</RelativeLayout>